Seguridad mejorada; Roles admin y user implementados
