# src/main/java/com/example/proyectoPrueba/controller/AuthController.java
@@ -1,17 +1,21 @@
 package com.example.proyectoPrueba.controller;
 
+import com.example.proyectoPrueba.JwtUtil;
 import com.example.proyectoPrueba.dto.TokenResponse;
-import com.example.proyectoPrueba.security.JwtUtil;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("/auth")
 public class AuthController {
+
     @PostMapping("/login")
     public TokenResponse login() {
-        String jwt = JwtUtil.generateToken("user");
+
+        String username = "user";
+        String role = "ADMIN"; // o USER
+
+        String jwt = JwtUtil.generateToken(username, role);
+
         return new TokenResponse(jwt);
     }
 }
