# src/main/resources/openAPI.yaml
@@ -26,6 +26,27 @@ tags:
 # ==========================================
 paths:
 
+  /auth/login:
+    post:
+      tags: [ Autenticación ]
+      summary: Login de usuario
+      description: Devuelve un JWT válido para acceder a la API
+      operationId: login
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginRequest'
+      responses:
+        '200':
+          description: Token generado correctamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TokenResponse'
+        '401':
+          description: Credenciales incorrectas
   /inv:
     post:
       tags: [Inventarios]
@@ -252,6 +273,26 @@ components:
                 example: "Error interno"
 
   schemas:
+
+    LoginRequest:
+      type: object
+      required:
+        - username
+        - password
+      properties:
+        username:
+          type: string
+          example: admin
+        password:
+          type: string
+          example: 1234
+
+    TokenResponse:
+      type: object
+      properties:
+        token:
+          type: string
+          example: eyJhbGciOiJIUzI1NiIs...
 
     InventoryDto:
       type: object
